dev/matomo/auth-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo-auth
  namespace: prod
spec:
  tls:
  - hosts:
    - matomo.dev.sdpaks.equinor.com
    secretName: matomo-tls
  rules:
    - host: matomo.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-sdp
                port:
                  number: 4180
